small addition to our page content

--- a/website/index.html
+++ b/website/index.html
@@ -4,6 +4,6 @@
 	<title>Hello coursera!</title>
 </head>
 <body>
-<h1>Hello Cousrera</h1>
+<h1>Hello Cousrera, I am happy to start this</h1>
 </body>
 </html>
